2009-12-28  Torbjorn Granlund  <tege@gmplib.org>

	* configure.in (gmp_mpn_functions_optional) Move "com" from here...
	(gmp_mpn_functions): ...to here.
	* mpn/generic/com.c: New file.
	* (mpn_com): New name for mpn_com_n.  Make public.
	* (mpn_neg): Analogous changes.

	* tune/tuneup.c (tune_mu_div, tune_mu_bdiv): Set step_factor.

	* tune/common.c, tune/speed.c, tune/speed.h: Support measuring
	mpn_lshiftc.

	* tests/devel/try.c: Test mpn_lshiftc.
	* tests/refmpn.c (refmpn_com): New function.
	(refmpn_lshiftc): Likewise.

	* configure.in (gmp_mpn_functions_optional) Move lshiftc from here...
	(gmp_mpn_functions): ...to here.
	* mpn/generic/lshiftc.c: New file.
	* mpn/x86_64/lshiftc.asm: New file.
	* mpn/x86_64/core2/lshiftc.asm: New file.
	* mpn/generic/mul_fft.c (mpn_lshiftc): Remove.

	* mpn/x86_64/core2/lshift.asm: Tweak for better Core iN performance.
	* mpn/x86_64/core2/rshift.asm: Likewise.

2009-12-27  Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mpn/generic/mul.c: Use toom6h and toom8h for almost balanced.

	* mpn/generic/mullo_n.c (mpn_dc_mullo_n): New ratio, to be used in
	Toom-8 range.

2009-12-27  Torbjorn Granlund  <tege@gmplib.org>

	* (mpn_sqr): New name for mpn_sqr_n.  Many files affected.

	* tune/tuneup.c (tune_mullo): Up step_factor for MULLO_MUL_N_THRESHOLD.
	(tune_invertappr, tune_invert, tune_binvert): Let max_size default.

	* tune/tuneup.c (tune_mu_div, tune_mu_bdiv) New functions.
	* tune/speed.h (SPEED_ROUTINE_MPN_MU_DIV_Q): New macro.
	(SPEED_ROUTINE_MPN_MU_DIV_QR): Likewise.
	(SPEED_ROUTINE_MPN_MU_BDIV_Q): Likewise.
	(SPEED_ROUTINE_MPN_MU_BDIV_QR): Likewise.
	* tune/Makefile.am (TUNE_MPN_SRCS_BASIC): Add bdiv_q.c and bdiv_qr.c.
	* tune/common.c (speed_mpn_mu_div_qr): New function.
	(speed_mpn_mu_divappr_q): Likewise.
	(speed_mpn_mu_div_q): Likewise.
	(speed_mpn_mu_bdiv_q): Likewise.
	(speed_mpn_mu_bdiv_qr): Likewise.

	* mpn/*/gmp-mparam.h: Fix incorrect MOD_1U_TO_MOD_1_1_THRESHOLD 0
	values.
